--- a/demo.yaml
+++ b/demo.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: agawande/my-app:latest
+        image: agawande/javaapp:latest
         ports:
         - containerPort: 80
         resources:
