--- a/demo.yaml
+++ b/demo.yaml
@@ -33,7 +33,8 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 80
-  - targetPort: 8080
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
   selector:
     app: democicd
